cluster/apps/media/arrs/organizr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: htpc
    run: organizr
  name: organizr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: htpc
      run: organizr
  template:
    metadata:
      labels:
        app: htpc
        run: organizr
    spec:
      containers:
      - env:
        - name: TZ
          value: Africa/Johannesburg
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: organizr/organizr:latest
        name: organizr
        ports:
        - containerPort: 80
          name: webui
        volumeMounts:
        - mountPath: /config
          name: nfs
          subPath: organizr
      securityContext:
        fsGroup: 1000
      volumes:
      - persistentVolumeClaim:
          claimName: nfs
        name: nfs
