cluster/apps/media/arrs/organizr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: htpc
  name: organizr
  namespace: media
spec:
  ports:
  - name: webui
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: htpc
    run: organizr
