cluster/apps/media/arrs/organizr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: organizr
  name: organizr
  namespace: media
spec:
  rules:
  - host: o.mark.cloud
    http:
      paths:
      - backend:
          service:
            name: organizr
            port:
              name: webui
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - o.mark.cloud
    secretName: organizr-tls
